project('raylib', 'c',
	version : '2.5.0',
	license: 'Zlib'
)

add_project_arguments('-DPLATFORM_' + get_option('raylib_platform'),
	language: 'c'
)

glfw_proj = subproject('glfw')
glfw_dep = glfw_proj.get_variable('glfw_dep')
glfw_dependencies = glfw_proj.get_variable('dependencies')

raylib_sources = [
	'raylib/src/rnet.h',
	'raylib/src/raudio.h',
	'raylib/src/camera.h',
	'raylib/src/raudio.c',
	'raylib/src/rlgl.h',
	'raylib/src/rmem.h',
	'raylib/src/text.c',
	'raylib/src/rglfw.c',
	'raylib/src/utils.h',
	'raylib/src/physac.h',
	'raylib/src/models.c',
	'raylib/src/config.h',
	'raylib/src/external/stb_vorbis.h',
	'raylib/src/external/glad.h',
	'raylib/src/external/jar_xm.h',
	'raylib/src/external/rgif.h',
	'raylib/src/external/par_shapes.h',
	'raylib/src/external/glfw/deps/vs2008/stdint.h',
	'raylib/src/external/glfw/deps/glad_vulkan.c',
	'raylib/src/external/glfw/deps/mingw/_mingw_dxhelper.h',
	'raylib/src/external/glfw/deps/mingw/xinput.h',
	'raylib/src/external/glfw/deps/mingw/dinput.h',
	'raylib/src/external/glfw/deps/getopt.c',
	'raylib/src/external/glfw/deps/glad/khrplatform.h',
	'raylib/src/external/glfw/deps/glad/gl.h',
	'raylib/src/external/glfw/deps/glad/vulkan.h',
	'raylib/src/external/glfw/deps/glad/vk_platform.h',
	'raylib/src/external/glfw/deps/getopt.h',
	'raylib/src/external/glfw/deps/glad_gl.c',
	'raylib/src/external/glfw/include/GLFW/glfw3.h',
	'raylib/src/external/glfw/include/GLFW/glfw3native.h',
	'raylib/src/external/glfw/src/input.c',
	'raylib/src/external/glfw/src/wl_window.c',
	'raylib/src/external/glfw/src/win32_window.c',
	'raylib/src/external/glfw/src/x11_init.c',
	'raylib/src/external/glfw/src/null_window.c',
	'raylib/src/external/glfw/src/posix_time.h',
	'raylib/src/external/glfw/src/cocoa_time.c',
	'raylib/src/external/glfw/src/posix_thread.c',
	'raylib/src/external/glfw/src/win32_init.c',
	'raylib/src/external/glfw/src/vulkan.c',
	'raylib/src/external/glfw/src/posix_time.c',
	'raylib/src/external/glfw/src/cocoa_platform.h',
	'raylib/src/external/glfw/src/osmesa_context.c',
	'raylib/src/external/glfw/src/posix_thread.h',
	'raylib/src/external/glfw/src/linux_joystick.c',
	'raylib/src/external/glfw/src/win32_monitor.c',
	'raylib/src/external/glfw/src/window.c',
	'raylib/src/external/glfw/src/win32_joystick.h',
	'raylib/src/external/glfw/src/wgl_context.h',
	'raylib/src/external/glfw/src/egl_context.c',
	'raylib/src/external/glfw/src/wl_init.c',
	'raylib/src/external/glfw/src/osmesa_context.h',
	'raylib/src/external/glfw/src/wgl_context.c',
	'raylib/src/external/glfw/src/win32_joystick.c',
	'raylib/src/external/glfw/src/win32_time.c',
	'raylib/src/external/glfw/src/x11_window.c',
	'raylib/src/external/glfw/src/win32_thread.c',
	'raylib/src/external/glfw/src/null_joystick.h',
	'raylib/src/external/glfw/src/cocoa_joystick.h',
	'raylib/src/external/glfw/src/mappings.h',
	'raylib/src/external/glfw/src/egl_context.h',
	'raylib/src/external/glfw/src/x11_monitor.c',
	'raylib/src/external/glfw/src/internal.h',
	'raylib/src/external/glfw/src/glx_context.c',
	'raylib/src/external/glfw/src/monitor.c',
	'raylib/src/external/glfw/src/null_joystick.c',
	'raylib/src/external/glfw/src/wl_monitor.c',
	'raylib/src/external/glfw/src/x11_platform.h',
	'raylib/src/external/glfw/src/null_platform.h',
	'raylib/src/external/glfw/src/null_monitor.c',
	'raylib/src/external/glfw/src/init.c',
	'raylib/src/external/glfw/src/glx_context.h',
	'raylib/src/external/glfw/src/xkb_unicode.h',
	'raylib/src/external/glfw/src/nsgl_context.h',
	'raylib/src/external/glfw/src/null_init.c',
	'raylib/src/external/glfw/src/wl_platform.h',
	'raylib/src/external/glfw/src/xkb_unicode.c',
	'raylib/src/external/glfw/src/context.c',
	'raylib/src/external/glfw/src/linux_joystick.h',
	'raylib/src/external/glfw/src/win32_platform.h',
	'raylib/src/external/cgltf.h',
	'raylib/src/external/android/native_app_glue/android_native_app_glue.c',
	'raylib/src/external/android/native_app_glue/android_native_app_glue.h',
	'raylib/src/external/stb_image_resize.h',
	'raylib/src/external/jar_mod.h',
	'raylib/src/external/stb_truetype.h',
	'raylib/src/external/stb_image_write.h',
	'raylib/src/external/miniaudio.h',
	'raylib/src/external/stb_perlin.h',
	'raylib/src/external/dr_wav.h',
	'raylib/src/external/dr_mp3.h',
	'raylib/src/external/stb_rect_pack.h',
	'raylib/src/external/tinyobj_loader_c.h',
	'raylib/src/external/stb_image.h',
	'raylib/src/external/dr_flac.h',
	'raylib/src/external/dirent.h',
	'raylib/src/external/ANGLE/KHR/khrplatform.h',
	'raylib/src/external/ANGLE/angle_windowsstore.h',
	'raylib/src/external/ANGLE/GLES3/gl3ext.h',
	'raylib/src/external/ANGLE/GLES3/gl3.h',
	'raylib/src/external/ANGLE/GLES3/gl3platform.h',
	'raylib/src/external/ANGLE/GLES2/gl2platform.h',
	'raylib/src/external/ANGLE/GLES2/gl2.h',
	'raylib/src/external/ANGLE/GLES2/gl2ext.h',
	'raylib/src/external/ANGLE/EGL/eglext.h',
	'raylib/src/external/ANGLE/EGL/egl.h',
	'raylib/src/external/ANGLE/EGL/eglplatform.h',
	'raylib/src/gestures.h',
	'raylib/src/raylib.h',
	'raylib/src/shapes.c',
	'raylib/src/textures.c',
	'raylib/src/easings.h',
	'raylib/src/core.c',
	'raylib/src/utils.c',
	'raylib/src/raymath.h',
]

raylib_dependencies = [glfw_dep, glfw_dependencies]

raylib_inc = include_directories('raylib/src', 'raylib/src/external', 'raylib/src/external/glfw/deps', 'raylib/src/external/ANGLE', 'raylib/src/external/android/native_app_glue')
raylib_lib = static_library('raylib', raylib_sources,
	dependencies: raylib_dependencies,
	include_directories: raylib_inc
)

raylib_dep = declare_dependency(
	include_directories: raylib_inc,
	link_with: raylib_lib
)

if get_option('raylib_build_examples')
	examples_deps = [raylib_dep]
	executable('core_basic_window', 'raylib/examples/core/core_basic_window.c', dependencies: examples_deps)
endif
